--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lambdacommonjs": "^1.0.1",
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.31",
+    "request": "^2.76.0",
+    "request-promise": "^4.2.2",
     "underscore": "^1.8.3"
   }
 }
