--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "main": "./lib/index",
   "dependencies": {
-    "bson-ext": "^1.0.5",
     "colors": "^1.1.2",
-    "discord.js": "^11.1.0",
+    "discord.js": "^11.1.0"
+    "lambdacommonjs": "^1.0.1"
+  },
+  "devDependencies": {
+    "bson-ext": "^1.0.5",
     "hashmap": "^2.1.0",
-    "lambdacommonjs": "^1.0.1",
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.31",
     "request": "^2.76.0",
