--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "./lib/index",
   "dependencies": {
     "colors": "^1.1.2",
-    "discord.js": "^11.1.0"
+    "discord.js": "^11.1.0",
     "lambdacommonjs": "^1.0.1"
   },
   "devDependencies": {
